--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-bind | split-window -h
-bind _ split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind _ split-window -v -c '#{pane_current_path}'
 unbind '"'
 unbind %
 bind -n M-Left select-pane -L
